--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -18,8 +18,9 @@ servers:
 #
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 # proxy:
-#   ssl: true
-#   host: app.example.com
+  ssl: true
+  host: john4john.com
+  app_port: 3000
 
 # Credentials for your image host.
 registry:
